--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "stdbool.h": "c",
         "my_blink.h": "c",
         "nrf_drv_clock.h": "c",
-        "nrfx_glue.h": "c"
+        "nrfx_glue.h": "c",
+        "nordic_common.h": "c",
+        "sdk_config.h": "c"
     }
 }
