--- a/pca10059/mbr/armgcc/Makefile
+++ b/pca10059/mbr/armgcc/Makefile
@@ -35,6 +35,7 @@ SRC_FILES += \
   $(PROJ_DIR)/src/my_button.c \
   $(PROJ_DIR)/src/my_blink.c \
   $(PROJ_DIR)/src/click.c \
+  $(PROJ_DIR)/src/hsv.c \
   $(SDK_ROOT)/modules/nrfx/mdk/system_nrf52840.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_gpiote.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_systick.c \
