--- a/pca10059/mbr/armgcc/Makefile
+++ b/pca10059/mbr/armgcc/Makefile
@@ -39,6 +39,7 @@ SRC_FILES += \
   $(PROJ_DIR)/src/states.c \
   $(PROJ_DIR)/src/set_color.c \
   $(PROJ_DIR)/src/click_manager.c \
+  $(PROJ_DIR)/src/nvmc.c \
   $(SDK_ROOT)/modules/nrfx/mdk/system_nrf52840.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_gpiote.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_systick.c \
@@ -49,6 +50,7 @@ SRC_FILES += \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_pwm.c \
   $(SDK_ROOT)/integration/nrfx/legacy/nrf_drv_clock.c \
   $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_clock.c \
+  $(SDK_ROOT)/modules/nrfx/drivers/src/nrfx_nvmc.c \
   
   
 # Include folders common to all targets
@@ -84,6 +86,7 @@ INC_FOLDERS += \
   $(SDK_ROOT)/components/libraries/log \
   $(SDK_ROOT)/integration/nrfx/legacy \
   $(SDK_ROOT)/modules/nrfx/drivers/include \
+  $(SDK_ROOT)/components/libraries/bootloader/dfu \
 
 
 
