save and read data is working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,13 @@
         "stdint.h": "c",
         "nrfx_nvmc.h": "c",
         "nrf_dfu_types.h": "c",
-        "app_util.h": "c"
+        "app_util.h": "c",
+        "nrf_log.h": "c",
+        "nvmc.h": "c",
+        "nrf_log_ctrl.h": "c",
+        "app_usbd.h": "c",
+        "nrf_log_backend_usb.h": "c",
+        "app_usbd_serial_num.h": "c",
+        "nrf_log_default_backends.h": "c"
     }
 }
