hsv command done
References #6

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "nrf_log_backend_usb.h": "c",
         "app_usbd_serial_num.h": "c",
         "nrf_log_default_backends.h": "c",
-        "app_usbd_cdc_acm.h": "c"
+        "app_usbd_cdc_acm.h": "c",
+        "type_traits": "c"
     }
 }
